<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerLayout"
        android:layout_width="416dp"
        android:layout_height="257dp"
        android:background="#00B7FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/gameCodeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/gameCodeET"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/groupNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/groupNameET"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameCodeET" />

        <Button
            android:id="@+id/startBTN"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#006ADC"
            android:onClick="startGame"
            android:text="@string/startBTN"
            android:textColor="#FFF6F6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupNameET" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playAreaLayout"
        android:layout_width="416dp"
        android:layout_height="482dp"
        android:background="#B5B4B4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLayout">

        <Button
            android:id="@+id/xBTN"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="108dp"
            android:backgroundTint="#FF6E6E6E"
            android:enabled="false"
            android:onClick="xButtonSelected"
            android:text="@string/xBTN"
            android:textSize="50sp"
            app:layout_constraintEnd_toStartOf="@+id/yBTN"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/yBTN"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="108dp"
            android:backgroundTint="#6E6E6E"
            android:enabled="false"
            android:onClick="yButtonSelected"
            android:text="@string/yBTN"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/xBTN"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreTV"
            android:layout_width="332dp"
            android:layout_height="44dp"
            android:layout_marginTop="200dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/buttonsSelectionTVbf"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roundTV"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/roundTVbf"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roundNumberTV"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginTop="52dp"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>